--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,13 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: 'e359f639-ed07-4ed1-ae91-81866828dee9'
+- task: DockerCompose@0
+  inputs:
+    containerregistrytype: 'Azure Container Registry'
+    azureSubscription: 'Azure Bechtle(1)(88ed4159-08f3-4814-ab82-2874adae0682)'
+    azureContainerRegistry: '{"loginServer":"studio1.azurecr.io", "id" : "/subscriptions/88ed4159-08f3-4814-ab82-2874adae0682/resourceGroups/RG_ST1/providers/Microsoft.ContainerRegistry/registries/studio1"}'
+    dockerComposeFile: '**/docker-compose.yml'
+    action: 'Run a Docker Compose command'
   imageRepository: 'ewpimcoredemo01'
   containerRegistry: 'studio1.azurecr.io'
   dockerfilePath: '**/Dockerfile'
